[package]
name = "gravity"
version = "0.1.0"
authors = ["Sigurd Ofstad <sigurof@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.18.0"
kiss3d = {path = "../kiss3d"}
derive_builder = "0.8.0"
rand = "0.7.2"
glutin="0.19.0"
gl="0.11.0"